tests/typechecking/invalid/fun4_wrng_param.ml
let rec f x y = x + y in 
f 4 5 8